updated mongodb module, added testcontainers lib to test

--- a/mongodb/src/main/resources/application.yml
+++ b/mongodb/src/main/resources/application.yml
@@ -1,6 +1,18 @@
 spring:
+  profiles:
+    active: dev
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
   data:
     mongodb:
       host: localhost
       port: 27017
       database: orders
+---
+spring:
+  config:
+    activate:
+      on-profile: test
