--- a/neo4j/src/main/resources/application.yml
+++ b/neo4j/src/main/resources/application.yml
@@ -9,3 +9,16 @@
 #      username: neo4j
 #
 #
+
+spring:
+  neo4j:
+    uri: bolt://localhost:7687
+    authentication:
+      username: neo4j
+      password: secret
+
+management:
+  health:
+    neo4j:
+      enabled: false
+
