--- a/redis/src/main/resources/application.yml
+++ b/redis/src/main/resources/application.yml
@@ -3,7 +3,9 @@ spring:
     active: development
 ---
 spring:
-  profiles: development
+  config:
+    activate:
+      on-profile: development
   redis:
     host: localhost
     port: 6379
@@ -17,9 +19,8 @@ spring:
     password: dbpass
 ---
 spring:
-  profiles: test
-  redis:
-    host: localhost
-    port: 6379
+  config:
+    activate:
+      on-profile: test
   jpa:
     database: H2
